@@ -94,6 +94,7 @@ CTRL+SHIFT+.    Copy the current working directory from the active file-list
 CTRL+R          Refresh the active file list
 CTRL+O          Options dialog
 CTRL+SHIFT+H    Toggle hidden files on/off
+CTRL+SHIFT+=    Set both panels equal
 
 CTRL+G          FTP Quick Connect
 CTRL+F          Connect to FTP server
