@@ -129,6 +129,9 @@ gnome_cmd_main_win_get_state (GnomeCmdMainWin *mw);
 void
 gnome_cmd_main_win_set_cap_state (GnomeCmdMainWin *mw, gboolean state);
 
+void
+gnome_cmd_main_win_set_equal_panes (GnomeCmdMainWin *mw);
+
 G_END_DECLS
 
 #endif // __GNOME_CMD_MAIN_WIN_H__
