@@ -12,6 +12,7 @@ New features:
  * Updated help docs
  * New or updated translations: ar, en_GB, fi, it, pl, sv
  * New key bindings:
+      CTRL+SHIFT+=   Set both panels equal
 
 
 ===================================
