@@ -1,3 +1,14 @@
+2006-11-22  Piotr Eljasiak  <epiotr@use.pl>
+
+	* doc/C/gnome-commander.xml:
+	* doc/keys.txt:
+	* src/gnome-cmd-main-menu.c:
+	* src/gnome-cmd-main-win.c:
+	* src/gnome-cmd-main-win.h:
+	* src/useractions.c:
+	* src/useractions.h:
+	Added CTRL+SHIFT+= for setting equal panels
+
 2006-11-21  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-main-menu.c:
